--- a/ui/ui-input/ui-input.css
+++ b/ui/ui-input/ui-input.css
@@ -9,90 +9,91 @@ ui-input{
   outline-offset:2px;
   outline-style:solid;
   outline-color:transparent;
-  background-color:var(--ui-input-background-color);}
+  background-color:var(--ui-input-background-color);
 
-ui-input[ui]{
-  transition-duration:var(--ui-transition-duration);
-  transition-property:outline-color;}
+  &[ui]{
+    transition-duration:var(--ui-transition-duration);
+    transition-property:outline-color;}
 
-ui-input::before{
-  content:'';
-  position:absolute;
-  inset:0;
-  border-radius:inherit;
-  border-width:1px;
-  border-style:solid;
-  border-color:var(--ui-input-border-color);
-  pointer-events:none;}
+  &::before{
+    content:'';
+    position:absolute;
+    inset:0;
+    border-radius:inherit;
+    border-width:1px;
+    border-style:solid;
+    border-color:var(--ui-input-border-color);
+    pointer-events:none;}
 
-ui-input input{
-  direction:inherit;
-  border:none;
-  outline:none;
-  padding:0;
-  height:100%;
-  font-size:var(--ui-input-font-size);
-  padding-inline:var(--ui-input-padding-inline);
-  color:var(--ui-input-font-color);
-  background-color:transparent;}
+  & input{
+    direction:inherit;
+    border:none;
+    outline:none;
+    padding:0;
+    height:100%;
+    font-size:var(--ui-input-font-size);
+    padding-inline:var(--ui-input-padding-inline);
+    color:var(--ui-input-font-color);
+    background-color:transparent;}
 
-ui-input input::placeholder{
-  color:var(--ui-input-placeholder-color);}
+  & input::placeholder{
+    color:var(--ui-input-placeholder-color);}
 
-ui-input[disabled] input,
-ui-input[disabled] input::placeholder{
-  color:var(--ui-input-disabled-color);}
+  &[disabled] input,
+  &[disabled] input::placeholder{
+    color:var(--ui-input-disabled-color);}
 
-ui-input[clearable] > input{
-  padding-inline-end:0;}
+  &[clearable] > input{
+    padding-inline-end:0;}
 
-ui-input > ui-icon{
-  display:block;
-  height:100%;
-  width:var(--ui-input-icon-size);
-  color:var(--ui-input-svg-color);
-  padding:var(--ui-input-icon-padding);
-  stroke-width:0;
-  cursor:pointer;
-  pointer-events:all!important;}
+  & > ui-icon{
+    display:block;
+    height:100%;
+    width:var(--ui-input-icon-size);
+    color:var(--ui-input-svg-color);
+    padding:var(--ui-input-icon-padding);
+    stroke-width:0;
+    cursor:pointer;
+    pointer-events:all!important;}
 
 
-@media (hover:hover){
-  ui-input:hover:not([disabled]){
+  @media (hover:hover){
+    &:hover:not([disabled]){
+      outline-color:var(--ui-input-outline-color);}
+
+    & > ui-icon:hover{
+      color:var(--ui-color-input-icons-active);}
+  }
+
+  &:focus-within:not([disabled]){
     outline-color:var(--ui-input-outline-color);}
 
-  ui-input > ui-icon:hover{
-    color:var(--ui-color-input-icons-active);}
+  /* shape */
+  &[shape="rounded"]{
+    --ui-input-border-radius:var(--ui-border-radius-rounded);}
+
+  &[shape="square"]{
+    --ui-input-border-radius:var(--ui-border-radius-square);}
+
+  &[shape="pill"]{
+    --ui-input-border-radius:var(--ui-border-radius-pill);}
+
+  /* theme */
+  &[theme="default"]{
+    --ui-input-background-color:var(--ui-color-gray-800);
+    --ui-input-border-color:var(--ui-color-gray-500);
+    --ui-input-border-color-hover:var(--ui-color-gray-100);
+    --ui-input-outline-color:var(--ui-color-gray-500);
+    --ui-input-font-color:var(--ui-color-white);
+    --ui-input-svg-color:var(--ui-color-gray-400);
+    --ui-input-placeholder-color:var(--ui-color-gray-500);
+    --ui-input-disabled-color:var(--ui-color-gray-300);}
+
+  /* size */
+  &[size="default"]{
+    --ui-input-font-size:14px;
+    --ui-input-size:32px;
+    --ui-input-icon-size:28px;
+    --ui-input-icon-padding:4px;
+    --ui-input-padding-inline:12px;}
 }
-
-ui-input:focus-within:not([disabled]){
-  outline-color:var(--ui-input-outline-color);}
-
-/* shape */
-ui-input[shape="rounded"]{
-  --ui-input-border-radius:var(--ui-border-radius-rounded);}
-
-ui-input[shape="square"]{
-  --ui-input-border-radius:var(--ui-border-radius-square);}
-
-ui-input[shape="pill"]{
-  --ui-input-border-radius:var(--ui-border-radius-pill);}
-
-/* theme */
-ui-input[theme="default"]{
-  --ui-input-background-color:var(--ui-color-gray-800);
-  --ui-input-border-color:var(--ui-color-gray-500);
-  --ui-input-border-color-hover:var(--ui-color-gray-100);
-  --ui-input-outline-color:var(--ui-color-gray-500);
-  --ui-input-font-color:var(--ui-color-white);
-  --ui-input-svg-color:var(--ui-color-gray-400);
-  --ui-input-placeholder-color:var(--ui-color-gray-500);
-  --ui-input-disabled-color:var(--ui-color-gray-300);}
-
-/* size */
-ui-input[size="default"]{
-  --ui-input-font-size:14px;
-  --ui-input-size:32px;
-  --ui-input-icon-size:28px;
-  --ui-input-icon-padding:4px;
-  --ui-input-padding-inline:12px;}
