--- a/ui/ui-label/ui-label.css
+++ b/ui/ui-label/ui-label.css
@@ -1,6 +1,6 @@
 ui-label > span{
   padding-inline-start:6px;
-  color:rgb(230,60,60);}
+  color:rgb(230,60,60);
 
-ui-label:not([passive]){
-  cursor:pointer;}
+  &:not([passive]){cursor:pointer;}
+}
