--- a/ui/ui-textarea/ui-textarea.css
+++ b/ui/ui-textarea/ui-textarea.css
@@ -11,70 +11,71 @@ ui-textarea{
   outline-style:solid;
   outline-color:transparent;
   border-radius:var(--ui-textarea-border-radius);
-  background-color:var(--ui-textarea-background-color);}
+  background-color:var(--ui-textarea-background-color);
 
-ui-textarea[ui]{
-  transition-duration:var(--ui-transition-duration);
-  transition-property:outline-color;}
+  &[ui]{
+    transition-duration:var(--ui-transition-duration);
+    transition-property:outline-color;}
 
-ui-textarea::before{
-  content:'';
-  position:absolute;
-  inset:0;
-  border-radius:inherit;
-  border-width:1px;
-  border-style:solid;
-  border-color:var(--ui-textarea-border-color);
-  pointer-events:none;}
+  &::before{
+    content:'';
+    position:absolute;
+    inset:0;
+    border-radius:inherit;
+    border-width:1px;
+    border-style:solid;
+    border-color:var(--ui-textarea-border-color);
+    pointer-events:none;}
 
-ui-textarea textarea{
-  direction:inherit;
-  border:none;
-  outline:none;
-  min-height:var(--ui-textarea-min-height);
-  width:100%;
-  min-width:var(--ui-textarea-min-width);
-  padding:var(--ui-textarea-padding);
-  resize:vertical;
-  font-size:var(--ui-textarea-font-size);
-  color:var(--ui-textarea-font-color);
-  background-color:transparent;}
+  & textarea{
+    direction:inherit;
+    border:none;
+    outline:none;
+    min-height:var(--ui-textarea-min-height);
+    width:100%;
+    min-width:var(--ui-textarea-min-width);
+    padding:var(--ui-textarea-padding);
+    resize:vertical;
+    font-size:var(--ui-textarea-font-size);
+    color:var(--ui-textarea-font-color);
+    background-color:transparent;}
 
-ui-textarea textarea::placeholder,
-ui-textarea[disabled] textarea{
-  color:var(--ui-textarea-disabled-placeholder-font-color);}
+  & textarea::placeholder,
+  &[disabled] textarea{
+    color:var(--ui-textarea-disabled-placeholder-font-color);}
 
-@media (hover:hover){
-  ui-textarea:hover:not([disabled]){
+  @media (hover: hover){
+    &:hover:not([disabled]){
+      outline-color:var(--ui-textarea-outline-color);}
+  }
+
+  &:focus-within:not([disabled]){
     outline-color:var(--ui-textarea-outline-color);}
+
+  /* width-mode */
+  &[width-mode="full"],
+  &[width-mode="full"] textarea{
+    width:100%!important;}
+
+  /* shape */
+  &[shape="rounded"]{
+    --ui-textarea-border-radius:var(--ui-border-radius-rounded);}
+
+  &[shape="square"]{
+    --ui-textarea-border-radius:var(--ui-border-radius-square);}
+
+  /* theme */
+  &[theme="default"]{
+    --ui-textarea-background-color:var(--ui-color-gray-800);
+    --ui-textarea-border-color:var(--ui-color-gray-500);
+    --ui-textarea-font-color:var(--ui-color-white);
+    --ui-textarea-disabled-placeholder-font-color:var(--ui-color-gray-400);
+    --ui-textarea-outline-color:var(--ui-color-gray-500);}
+
+  /* size */
+  &[size="default"]{
+    --ui-textarea-font-size:14px;
+    --ui-textarea-padding:10px 12px;
+    --ui-textarea-min-height:34px;
+    --ui-textarea-min-width:100px;}
 }
-
-ui-textarea:focus-within:not([disabled]){
-  outline-color:var(--ui-textarea-outline-color);}
-
-/* width-mode */
-ui-textarea[width-mode="full"],
-ui-textarea[width-mode="full"] textarea{
-  width:100%!important;}
-
-/* shape */
-ui-textarea[shape="rounded"]{
-  --ui-textarea-border-radius:var(--ui-border-radius-rounded);}
-
-ui-textarea[shape="square"]{
-  --ui-textarea-border-radius:var(--ui-border-radius-square);}
-
-/* theme */
-ui-textarea[theme="default"]{
-  --ui-textarea-background-color:var(--ui-color-gray-800);
-  --ui-textarea-border-color:var(--ui-color-gray-500);
-  --ui-textarea-font-color:var(--ui-color-white);
-  --ui-textarea-disabled-placeholder-font-color:var(--ui-color-gray-400);
-  --ui-textarea-outline-color:var(--ui-color-gray-500);}
-
-/* size */
-ui-textarea[size="default"]{
-  --ui-textarea-font-size:14px;
-  --ui-textarea-padding:10px 12px;
-  --ui-textarea-min-height:34px;
-  --ui-textarea-min-width:100px;}
